--- a/privatePortfolio/web/package.json
+++ b/privatePortfolio/web/package.json
@@ -18,7 +18,8 @@
     "@redwoodjs/web": "^0.34.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
