--- a/privatePortfolio/web/package.json
+++ b/privatePortfolio/web/package.json
@@ -19,7 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
